[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/images/entities/turret/idle/idle_0.png" type="Texture" id=1]
[ext_resource path="res://assets/images/turret_barrel.png" type="Texture" id=2]
[ext_resource path="res://src/Entities/Turret/Turret.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 21, 7 )

[node name="Turret" type="Area2D"]
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 3, 3 )
texture = ExtResource( 1 )

[node name="Barrel" type="Sprite" parent="."]
position = Vector2( -3, 16 )
scale = Vector2( 2.5, 2.5 )
texture = ExtResource( 2 )

[node name="BarrelPosition" type="Position2D" parent="Barrel"]
position = Vector2( 13.4162, -0.0713849 )

[node name="BarrelPosition2" type="Position2D" parent="Barrel"]
position = Vector2( 31.8823, -0.0163907 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -1, 17 )
shape = SubResource( 1 )

[node name="TurretFireTimer" type="Timer" parent="."]
wait_time = 2.0

[connection signal="timeout" from="TurretFireTimer" to="." method="_on_TurretFireTimer_timeout"]
